tests/NormalTests/paczka1/fuzzy1/19727506.err
Error in line 4: S419 A461 26,9
Error in line 3: c8VR1 S419 5,5
Error in line 11: c8VR1 S419 43,9
Error in line 10: S419 A202 1391,1
Error in line 22: S419 S419 86,2
Error in line 32: S419 S240 62,7
Error in line 35: RsALzHEx S240 53,9
Error in line 27: 628 A202 76,1
Error in line 37: 628 S240 19,5
Error in line 39: 628 A202 90,1
